--- a/templates/good.html
+++ b/templates/good.html
@@ -41,7 +41,6 @@
 </div>
 
 
-
 <div class="meter-overlay"></div>
 <div class="meter-table-container">
 
@@ -80,5 +79,13 @@
   
 </div>
 {% include "./components/footer.html" %}
+<!-- 
+пофіксити сітку, -очікуємо
+адаптація
+головний тект на головній сторінці
+головні фото на гоовній сторінці
+добавити юзер експіріенс в обиранні розміру на сорінці покупки
+добавити загрузку на сторінку коли іде обробка
 
-<!-- пофіксити видалення з лайка та корзини, пофіксити стягування, пофіксити сітку, добавити створення накладної, видалення гудсів -->
+почистити футер !!!
+-->
