--- a/static/payment.css
+++ b/static/payment.css
@@ -7,7 +7,7 @@ body {
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto auto 1fr auto;
     gap: 20px;
-    padding: 20px;
+    padding: 20px 20px 0px 20px;
 }
 
 .order-form, .cart-summary, .delivery-options, .payment-options {
@@ -218,4 +218,63 @@ textarea {
     margin-left: 20px;
     margin-bottom: 0px;
     color: red !important;
+}
+
+
+
+.succeed-payment-container {
+    display: none; 
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4); 
+  }
+  
+.succeed-payment-wrapper {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px solid #888;
+    width: 50%;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.succeed-payment-close {
+    color: #888;
+    background-color: #fff;
+    border-color: #888;
+    border-radius: 8px;
+    padding: 10px 30px 10px 30px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.succeed-payment-close:hover, .succeed-payment-close:focus {
+    text-decoration: none;
+    cursor: pointer;
+    color: #4665ff;
+    border: 2px solid #274bff ; 
+    box-shadow: 0 0px 6px rgba(39, 75, 255, 0.5);
+}
+
+.succeed-payment-message{
+    margin: 10px;
+    font-size: 26px;
+}
+
+.succeed-payment-message-telegram{
+    margin: 10px;
+    font-size: 13px !important; 
+    color: #999999;
+}
+
+.succeed-payment-close{
+    margin-top: 100px;
 }
