--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../static/footer.css">
     <link rel="stylesheet" href="../../static/good.css">
     <link rel="stylesheet" href="../../static/payment.css">
+    <link rel="stylesheet" href="../../static/policy.css">
     <title>It Step Shop</title>
 
   </head>
@@ -36,7 +37,7 @@
                 <div class="likeDropdownChild">
                   <div class="containerForLike">
                     <h1 href="">вподобайки</h1>
-                    <div onclick = "toggleDropdownLike()"><img src="../../static/public/close.png" alt="" class="close-img"></div>
+                    <button style="background-color: transparent; border: 0px;" onclick = "toggleDropdownLike()"><img src="../../static/public/close.png" alt="" class="close-img"></button>
                   </div>
                   
                   <div class="likedGoodsContainer"></div>
@@ -55,7 +56,7 @@
                 <div class="cartDropdownChild">
                   <div class="containerForCart">
                     <h1 href="">кошик</h1>
-                    <botton onclick = "toggleDropdownCart()"><img src="../../static/public/close.png" alt="" class="close-img"></botton>
+                    <button style="background-color: transparent; border: 0px;" onclick = "toggleDropdownCart()"><img src="../../static/public/close.png" alt="" class="close-img"></button>
                   </div>
                   
                   <div class="cartedGoodsContainer"></div>
@@ -65,15 +66,12 @@
               
               </div>
 
-            
-
             <!-- <div class="cart-container">
               <a href = "{{url_for('payment')}}" class="like">
                 <img src="../../static/public/cartIcon.png" alt="" class="cart-img">
               </a>
               <div class="cart-counter"></div>
             </div> -->
-
 
           </div>
         </div>
