--- a/static/good.css
+++ b/static/good.css
@@ -1,12 +1,12 @@
 .goodcontainer{
     display: flex;
     padding-top: 50px;
-    height: 100vh;
+    align-items: center;
 }
 
 .bg-good-container{
     position: relative;
-    width: 50%;
+    width: 600px;
 
 }
 
@@ -66,13 +66,19 @@
 .good-price{
     font-weight: bolder;
     font-size: 25px;
-    margin: 20px 0px 20px 0px;
+    margin: 0px 0px 60px 0px;
+}
+
+.good-price-home{
+    font-weight: bolder;
+    font-size: 25px;
+    margin: 0px 0px 10px 0px;
 }
 
 .color-name , .size-name{
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 25px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
 }
@@ -83,7 +89,7 @@
 }
 
 .description, .composition-and-care{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .add-to-cart-btn.animate {
@@ -284,6 +290,62 @@ body.locked {
 
 .how-to-measure{
     margin-top: 40px;
+}
+
+.closeDescription {
+    max-height: 40px;
+    overflow: hidden;
+    position: relative;
+    transition: max-height 0.5s ease;
+    box-sizing: border-box;
+}
+
+.description {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    cursor: pointer;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+    box-sizing: border-box;
+}
+
+.closeDescription::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 35px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    pointer-events: none;
+}
+
+.composition-and-care {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    cursor: pointer;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+    box-sizing: border-box;
+}
+
+.closeCare {
+    max-height: 40px;
+    overflow: hidden;
+    position: relative;
+    transition: max-height 0.5s ease;
+    box-sizing: border-box;
+}
+
+.closeCare::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 35px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+    pointer-events: none;
 }
 
 
