--- a/static/header.css
+++ b/static/header.css
@@ -298,6 +298,10 @@
     text-overflow: ellipsis;
 }
 
+.InfoMainTextElement:hover{
+    color: #0e1d91;
+}
+
 .likedGoodsContentElement{
     display: flex;
     align-items: center;
@@ -334,6 +338,7 @@
 
 .InfoMainElementWraper{
     display: flex;
+    align-items: center;
 }
 
 .InfoMainCodeElementLabel{
@@ -357,17 +362,6 @@
     font-size: 15px;
     font-weight: 300;
     margin-bottom: 5px;
-}
-
-.InfoMainSizeElementValue{
-    font-size: 15px;
-    font-weight: 450;
-    margin-left: 5px;
-    margin-bottom: 5px;
-    display: inline-block;
-    white-space: nowrap;
-    overflow: hidden; 
-    text-overflow: ellipsis;
 }
 
 .InfoColorMainElementLabel{
@@ -422,6 +416,41 @@
 .cartedGoodsContainerButton:not(:disabled):hover {
     animation: spinShake 0.25s infinite;
     transform-origin: center; 
+}
+
+.InfoMainSizeElementValue{
+    font-size: 15px;
+    font-weight: 450;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden; 
+    text-overflow: ellipsis;
+}
+
+
+.InfoMainSizeElementValue {
+    font-size: 12px;
+    width: 50%;
+    padding: 2px;
+    margin-top: 3px;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+    text-align-last: center;
+    height: 25px;
+    transition: border 0.25s ease;
+    margin-left: 5px;
+}
+
+.InfoMainSizeElementValue:focus {
+    outline: 2px solid transparent;
+}
+
+.InfoMainSizeElementValue:hover {
+    border: 2px solid #274bff ; 
+    box-shadow: 0 0px 6px rgba(39, 75, 255, 0.5);
 }
 
 @media (max-width: 768px) {
