--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
                     <img class="good-item good-item-hover" src="{{good.img_url_back}}" alt="good item"/>
                 </div>
                 <div class="good-name" >{{good.name}}</div>
-                <div class="good-price">₴{{good.price}}</div>
+                <div class="good-price-home">₴{{good.price}}</div>
             </a>
         </div> 
         {% endfor %}
